Do not ask for endpoint url or type on swagger api
