# hypermap/search_api/static/swagger/search_api.yaml
@@ -29,20 +29,6 @@ paths:
       # This is array of GET operation parameters:
       parameters:
         # An example parameter that is in query and is required
-        -
-          name: search_engine
-          in: query
-          description: Where will be running the search.
-          type: string
-          default: "solr"
-          enum: [ "solr", "elasticsearch" ]
-        -
-          name: search_engine_endpoint
-          description: "Specify only if external endpoint, internals are attached to Catalogs"
-          in: query
-          type: string
-          default: "http://54.221.223.91:8983/solr/hypermap/select"
-        -
           name: catalog_slug
           in: path
           description: Slug of catalog that needs to be fetched
